Fix overflow issue on mobile

--- a/src/components/banner/banner.styles.scss
+++ b/src/components/banner/banner.styles.scss
@@ -1,10 +1,11 @@
 .banner {
+  align-items: center;
   background-color: #fe0000;
-  height: 250px;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
+  height: 250px;
+  overflow: hidden;
 
   .banner-content {
     max-width: 960px;
