--- a/src/components/card-list/card-list.styles.scss
+++ b/src/components/card-list/card-list.styles.scss
@@ -9,7 +9,6 @@
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
-    overflow: hidden;
     width: 100%;
   }
 }
