--- a/src/components/card/card.styles.scss
+++ b/src/components/card/card.styles.scss
@@ -27,7 +27,6 @@
   }
 
   @media screen and (max-width: 480px) {
-    margin: 10px 0;
-    width: 22%;
+    width: 25%;
   }
 }
